# Hack-The-Cloud-2.0

./: .gitignore  .replit  README.md  main.py  pyproject.toml  setup.cfg  setup.py
flaskr/: __init__.py  auth.py  db.py  schema.sql
flaskr/static/: main.css
flaskr/templates/: template.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/other/: 404.html  data.html  home.html  profile.html
tests/: test_blog.py
