[tool.poetry]
name = "repl_python3_Hack-The-Cloud-20-1"
version = "0.1.0"
description = ""
authors = ["Ryan Lee <ryanlee4761@gmail.com", "Sanjay Srikanth", "MrToast"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = [
  "setuptools>=42",
  "wheel"
]
build-backend = "setuptools.build_meta"
