[tool.poetry]
name = "repl_python3_Hack-The-Cloud-20-1"
version = "0.1.0"
description = ""
authors = ["Ryan Lee <ryanlee4761@gmail.com", "Sanjay Srikanth", "MrToast"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
bs4 = "^0.0.1"
country-converter = "^0.7.3"
Flask-Simple-GeoIP = "^0.2.4"
gevent = "^21.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = [
  "setuptools>=42",
  "wheel"
]
build-backend = "setuptools.build_meta"
